--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,16 +2,17 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="grey">#E1E1E1</color>
 
     <color name="primary">#ffb145</color>
     <color name="on_primary">#ffffff</color>
     <color name="primary_container">#653e00</color>
     <color name="on_primary_container">#ffddb7</color>
 
-    <color name="secondary">#dfc2a2</color>
+    <color name="secondary">#FFDDB8</color>
     <color name="on_secondary">#3f2d17</color>
     <color name="secondary_container">#57432b</color>
-    <color name="on_secondary_container">#fcdebc</color>
+    <color name="on_secondary_container">#FFF6EC</color>
 
     <color name="tertiary">#bacd9f</color>
     <color name="on_tertiary">#263514</color>
