--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -15,8 +15,8 @@
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/iv_cart_menu"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
+            android:layout_width="110dp"
+            android:layout_height="110dp"
             android:scaleType="centerCrop"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -65,11 +65,10 @@
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:hint="@string/text_hint_note"
-            android:padding="4dp"
             android:textSize="12sp"
-            app:layout_constraintBottom_toTopOf="@id/layout_item_quantity"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/iv_trash" />
+            android:backgroundTint="@color/darkGrey"
+            app:layout_constraintTop_toBottomOf="@id/line_cart"
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <include
             android:id="@+id/layout_item_quantity"
@@ -81,24 +80,11 @@
             app:layout_constraintBottom_toTopOf="@id/line_cart"
             app:layout_constraintEnd_toEndOf="parent" />
 
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="8dp"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:fontFamily="@font/font_poppins_semibold"
-            android:text="@string/text_cart_total_price_item"
-            android:textSize="14sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/line_cart" />
-
         <View
             android:id="@+id/line_cart"
             android:layout_width="0dp"
             android:layout_height="1dp"
-            android:background="#CD848484"
+            android:background="@color/darkGrey"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@id/tv_cart_menu_name"
             app:layout_constraintTop_toBottomOf="@id/iv_cart_menu" />
