--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="grey">#E1E1E1</color>
+    <color name="grey">#C8C8C8</color>
+    <color name="darkGrey">#CD848484</color>
 
     <color name="primary">#ffb145</color>
     <color name="on_primary">#ffffff</color>
