--- a/app/src/main/res/layout/layout_add_cart_control.xml
+++ b/app/src/main/res/layout/layout_add_cart_control.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginTop="8dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -53,7 +54,7 @@
             android:layout_height="wrap_content"
             android:layout_marginVertical="16dp"
             android:background="@drawable/btn_rounded"
-            android:text="@string/text_default_button"
+            tools:text="@string/text_default_button"
             android:textColor="@color/black"
             android:textSize="14sp"
             android:textStyle="bold"
