create local storage for storing cart data using room

--- a/app/src/main/res/layout/layout_header.xml
+++ b/app/src/main/res/layout/layout_header.xml
@@ -26,10 +26,9 @@
             android:ellipsize="end"
             android:maxLines="1"
             android:text="@string/text_name"
-            android:textColor="@color/on_secondary"
             android:textSize="18sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/iv_cart"
+            app:layout_constraintEnd_toStartOf="@+id/iv_theme_mode"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -40,7 +39,6 @@
             android:ellipsize="end"
             android:maxLines="1"
             android:text="@string/text_greetings"
-            android:textColor="@color/on_secondary"
             android:textSize="16sp"
             app:layout_constraintEnd_toStartOf="@+id/iv_theme_mode"
             app:layout_constraintStart_toStartOf="parent"
