--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    android:background="@color/on_secondary_container"
+    android:background="@color/primary_container"
     tools:context=".presentation.detailmenu.DetailActivity">
 
     <ScrollView
