--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,13 +7,13 @@
 
     <color name="primary">#ffb145</color>
     <color name="on_primary">#ffffff</color>
-    <color name="primary_container">#653e00</color>
+    <color name="primary_container">#FFF6EC</color>
     <color name="on_primary_container">#ffddb7</color>
 
     <color name="secondary">#FFDDB8</color>
     <color name="on_secondary">#3f2d17</color>
-    <color name="secondary_container">#57432b</color>
-    <color name="on_secondary_container">#FFF6EC</color>
+    <color name="secondary_container">#E3C69F</color>
+    <color name="on_secondary_container">#B92E1C00</color>
 
     <color name="tertiary">#bacd9f</color>
     <color name="on_tertiary">#263514</color>
