--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -18,28 +18,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
-        <TextView
-            android:id="@+id/tv_category_title"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="8dp"
-            android:layout_marginVertical="8dp"
-            android:text="@string/text_category_title"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/iv_category_icon"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/layout_header" />
-
-        <ImageView
-            android:id="@+id/iv_category_icon"
-            android:layout_width="23dp"
-            android:layout_height="23dp"
-            android:layout_marginHorizontal="8dp"
-            android:src="@drawable/ic_categories"
-            app:layout_constraintBottom_toBottomOf="@id/tv_category_title"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/tv_category_title" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_category"
@@ -51,7 +29,7 @@
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_category_title"
+            app:layout_constraintTop_toBottomOf="@+id/layout_header"
             tools:listitem="@layout/item_category" />
 
         <TextView
