--- a/app/src/main/res/layout/item_menu_list.xml
+++ b/app/src/main/res/layout/item_menu_list.xml
@@ -58,7 +58,7 @@
             android:id="@+id/iv_favorite_icon"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:src="@drawable/ic_favorite"
+            android:src="@drawable/ic_add"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
