--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,7 +12,7 @@
 
     <color name="secondary">#FFDDB8</color>
     <color name="on_secondary">#3f2d17</color>
-    <color name="secondary_container">#E3C69F</color>
+    <color name="secondary_container">#FFE4BF</color>
     <color name="on_secondary_container">#B92E1C00</color>
 
     <color name="tertiary">#bacd9f</color>
