add feature checkout menu, set list on checkout, dialog when order success

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -10,7 +10,7 @@
     tools:context=".presentation.detailmenu.DetailActivity">
 
     <ScrollView
-        android:id="@+id/nsv_detail_menu"
+        android:id="@+id/sv_detail_menu"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginBottom="4dp"
