--- a/app/src/main/res/layout/layout_cart_header.xml
+++ b/app/src/main/res/layout/layout_cart_header.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/tv_profile_title"
+        android:id="@+id/tv_checkout_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginVertical="8dp"
@@ -24,7 +24,7 @@
         android:background="#4F4F4F"
         android:layout_marginVertical="8dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_profile_title"
+        app:layout_constraintTop_toBottomOf="@id/tv_checkout_title"
         app:layout_constraintEnd_toEndOf="parent"/>
 
 
