--- a/app/src/main/res/layout/layout_checkout_header.xml
+++ b/app/src/main/res/layout/layout_checkout_header.xml
@@ -10,7 +10,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginVertical="8dp"
-        android:text="@string/text_profile_header"
+        android:text="@string/text_checkout_header"
         android:textSize="18sp"
         android:textAlignment="center"
         android:fontFamily="@font/font_poppins_semibold"
@@ -19,20 +19,20 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/iv_edit_profile"
+        android:id="@+id/iv_back"
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:layout_marginVertical="8dp"
-        android:src="@drawable/ic_edit"
+        android:src="@drawable/ic_back"
         android:layout_marginHorizontal="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#4F4F4F"
-         android:layout_marginVertical="8dp"
+        android:layout_marginVertical="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_checkout_title"
         app:layout_constraintEnd_toEndOf="parent"/>
