--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -15,8 +15,8 @@
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/iv_menu_img"
-            android:layout_width="110dp"
-            android:layout_height="110dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:scaleType="centerCrop"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -62,11 +62,15 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/et_text_note"
-            android:layout_width="150dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:padding="8dp"
+            android:layout_marginHorizontal="8dp"
             android:hint="@string/text_hint_note"
+            android:background="@drawable/bg_edit_text_secondary"
             android:textSize="12sp"
-            android:backgroundTint="@color/darkGrey"
+            app:layout_constraintStart_toEndOf="@+id/iv_menu_img"
             app:layout_constraintTop_toBottomOf="@id/line_cart"
             app:layout_constraintEnd_toEndOf="parent" />
 
