--- a/app/src/main/res/layout/item_checkout_menu.xml
+++ b/app/src/main/res/layout/item_checkout_menu.xml
@@ -27,7 +27,7 @@
         android:maxLines="1"
         android:text="@string/text_cart_menu_name"
         android:textSize="16sp"
-        app:layout_constraintEnd_toStartOf="@id/tv_total_quantity"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/iv_menu_img"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -40,41 +40,32 @@
         android:maxLines="1"
         android:text="@string/text_cart_menu_price"
         android:textSize="12sp"
-        app:layout_constraintEnd_toStartOf="@id/tv_total_quantity"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/iv_menu_img"
         app:layout_constraintTop_toBottomOf="@id/tv_checkout_menu_name" />
 
     <TextView
         android:id="@+id/tv_total_quantity"
-        style="@style/TextAppearance.Material3.TitleMedium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
+        android:layout_marginHorizontal="8dp"
+        android:fontFamily="@font/font_poppins_semibold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_checkout_menu_name"
         tools:text="x5" />
 
     <TextView
         android:id="@+id/tv_text_note"
         android:layout_width="0dp"
-        android:layout_margin="8dp"
         android:layout_height="wrap_content"
+        android:layout_margin="8dp"
         android:backgroundTint="@color/darkGrey"
-        android:hint="@string/text_hint_note"
+        tools:hint="@string/text_hint_note"
         android:textSize="12sp"
-        app:layout_constraintStart_toEndOf="@+id/iv_menu_img"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/line_cart" />
+       app:layout_constraintTop_toBottomOf="@id/tv_checkout_menu_price"
+        app:layout_constraintStart_toEndOf="@+id/iv_menu_img" />
 
-
-    <View
-        android:id="@+id/line_cart"
-        android:layout_width="0dp"
-        android:layout_height="1dp"
-        android:background="@color/darkGrey"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@id/tv_checkout_menu_name"
-        app:layout_constraintTop_toBottomOf="@id/iv_menu_img" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
