--- a/app/src/main/res/layout/layout_button_order.xml
+++ b/app/src/main/res/layout/layout_button_order.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:paddingTop="8dp"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/white">
 
@@ -10,7 +11,7 @@
         android:id="@+id/tv_total_price_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginVertical="8dp"
         android:text="@string/text_total_price"
         android:textSize="14sp"
         android:layout_marginHorizontal="8dp"
@@ -23,10 +24,11 @@
         android:layout_height="wrap_content"
         tools:text="Rp50.000"
         android:layout_marginHorizontal="8dp"
+        android:layout_marginVertical="8dp"
         android:textSize="16sp"
+        app:layout_constraintTop_toTopOf="parent"
         android:fontFamily="@font/font_poppins_semibold"
-        app:layout_constraintTop_toBottomOf="@+id/tv_total_price_title"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/btn_add_to_cart"
