--- a/app/src/main/res/layout/layout_checkout_content.xml
+++ b/app/src/main/res/layout/layout_checkout_content.xml
@@ -13,7 +13,6 @@
         layout="@layout/layout_content_state"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@id/layout_button_order"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -22,7 +21,6 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@id/layout_button_order"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -93,6 +91,7 @@
                         android:id="@+id/rv_summary_order"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:minHeight="100dp"
                         android:layout_marginHorizontal="8dp"
                         android:layout_marginVertical="4dp"
                         android:background="@drawable/bg_rounded_border_transparent"
