--- a/app/src/main/res/layout/layout_dialog_order.xml
+++ b/app/src/main/res/layout/layout_dialog_order.xml
@@ -4,11 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cv_dialog"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    app:cardCornerRadius="16dp"
+    android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_dialog"
         android:layout_width="match_parent"
+        android:padding="32dp"
+        android:background="@drawable/bg_rounded_border_transparent"
         android:layout_height="wrap_content">
 
         <ImageView
@@ -21,42 +24,23 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/tv_success_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/font_poppins_semibold"
-            android:text="@string/text_dialog_order_success"
-            android:textSize="16sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/iv_success" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_summary_order"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
+            android:minHeight="100dp"
             android:layout_marginHorizontal="8dp"
-            android:layout_marginVertical="4dp"
+            android:layout_marginVertical="8dp"
+            android:padding="8dp"
             android:background="@drawable/bg_rounded_border_transparent"
             android:orientation="vertical"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_success_title"
+            app:layout_constraintTop_toBottomOf="@id/tv_date_time"
             tools:listitem="@layout/item_price" />
 
-        <TextView
-            android:id="@+id/tv_total_price_title"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="8dp"
-            android:fontFamily="@font/font_poppins_semibold"
-            android:text="@string/text_total_price"
-            android:textSize="16sp"
-            app:layout_constraintEnd_toStartOf="@id/tv_total_price_success"
-            app:layout_constraintStart_toStartOf="@id/rv_summary_order"
-            app:layout_constraintTop_toBottomOf="@id/rv_summary_order" />
 
         <TextView
             android:id="@+id/tv_total_price_success"
@@ -65,9 +49,22 @@
             android:layout_marginVertical="8dp"
             android:fontFamily="@font/font_poppins_semibold"
             android:text="@string/text_total_price_cart"
-            android:textSize="16sp"
-            app:layout_constraintEnd_toEndOf="@id/rv_summary_order"
-            app:layout_constraintTop_toBottomOf="@id/rv_summary_order" />
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/iv_success" />
+
+        <TextView
+            android:id="@+id/tv_date_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="8dp"
+            android:textColor="@android:color/black"
+            tools:text="10 jan 1920, 15:25:33"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_total_price_success" />
+
 
         <Button
             android:id="@+id/btn_back_on_success"
@@ -79,7 +76,7 @@
             android:textColor="@color/primary"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_total_price_success" />
+            app:layout_constraintTop_toBottomOf="@id/rv_summary_order" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
