--- a/app/src/main/res/layout/layout_order_cart.xml
+++ b/app/src/main/res/layout/layout_order_cart.xml
@@ -15,7 +15,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/text_total_price"
-            android:textSize="12sp"
+            android:textSize="14sp"
+            android:layout_marginTop="8dp"
             app:layout_constraintBottom_toTopOf="@+id/tv_total_price"
             app:layout_constraintEnd_toStartOf="@+id/btn_order"
             app:layout_constraintStart_toStartOf="parent"
