change font app

--- a/app/src/main/res/layout/layout_register_form.xml
+++ b/app/src/main/res/layout/layout_register_form.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:fontFamily="@font/font_poppins_semibold"
+        android:fontFamily="@font/font_open_sans_semi_bold"
         android:text="@string/text_full_name"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,7 +38,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:fontFamily="@font/font_poppins_semibold"
+        android:fontFamily="@font/font_open_sans_semi_bold"
         android:text="@string/text_profile_username"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -65,7 +65,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:fontFamily="@font/font_poppins_semibold"
+        android:textStyle=""
+        android:fontFamily="@font/font_open_sans_semi_bold"
         android:text="@string/text_profile_email"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -93,7 +94,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:fontFamily="@font/font_poppins_semibold"
+        android:fontFamily="@font/font_open_sans_semi_bold"
         android:text="@string/text_phone_number"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -121,7 +122,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:fontFamily="@font/font_poppins_semibold"
+        android:fontFamily="@font/font_open_sans_semi_bold"
         android:text="@string/text_password"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -150,7 +151,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:fontFamily="@font/font_poppins_semibold"
+        android:fontFamily="@font/font_open_sans_semi_bold"
         android:text="@string/text_confirm_password"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
