--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -38,7 +38,7 @@
             android:id="@+id/btn_change_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/btn_outline_primary"
+            android:background="@color/grey"
             android:text="@string/text_change_password"
             android:textColor="@color/primary"
             android:textSize="16sp" />
