--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <style name="AppTheme" parent="Theme.Material3.Dark.NoActionBar">
-        <item name="android:fontFamily">@font/poppins_font</item>
+        <item name="android:fontFamily">@font/open_sans_font</item>
         <item name="colorPrimary">#7B3F00</item>
         <item name="colorOnPrimary">@color/dark_on_primary</item>
         <item name="colorPrimaryContainer">@color/dark_primary_container</item>
