--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -23,7 +23,7 @@
         <item name="colorOnErrorContainer">@color/on_error_container</item>
     </style>
 
-    <style name="RoundedImageViewCategory" parent="">
+    <style name="RoundedImageViewCircle" parent="">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">50%</item>
     </style>
