--- a/app/src/main/res/layout/layout_dialog_order.xml
+++ b/app/src/main/res/layout/layout_dialog_order.xml
@@ -20,7 +20,7 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_summary_order"
+        android:id="@+id/rv_summary_order_dialog"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="8dp"
@@ -69,7 +69,7 @@
         android:textColor="@color/primary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/rv_summary_order" />
+        app:layout_constraintTop_toBottomOf="@id/rv_summary_order_dialog" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
